--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,13 +8,59 @@ output:
 
 ## Loading and preprocessing the data
 
+```{r}
+# read the raw data into data frame objec rawData
+rawData <- read.csv(unz("activity.zip", "activity.csv"))
+# filter out NAs
+filteredData <- rawData[complete.cases(rawData),]
+# Aggregate steps, sum by date and store in q1HistoData
+q1HistoData <- aggregate(filteredData$steps, by=list(Date=filteredData$date), FUN=sum)
+Q2Data <- aggregate(filteredData$steps, by=list(Interval=filteredData$interval), FUN=mean)
+
+```
+
 
 
 ## What is mean total number of steps taken per day?
 
+Below is the histogram for sum of steps by Date
+
+```{r, echo=FALSE}
+barplot(q1HistoData$x, names.arg=q1HistoData$Date, las=2, main = "Total number of steps taken each day")
+```
+
+Mean - total number of steps taken per day : 
+```{r}
+paste('Mean - total number of steps taken per day : ', mean(q1HistoData$x))
+
+```
+
+Median - total number of steps taken per day: 
+```{r}
+paste('Median - total number of steps taken per day : ', median(q1HistoData$x))
+
+```
 
 
 ## What is the average daily activity pattern?
+
+```{r, echo=FALSE}
+plot(Q2Data, type = 'l', main = 'Average number of steps taken (averaged across all days) versus the 5-minute intervals', xlab='5-minute intervals', ylab='averaged across all days')
+```
+
+Below is the calculation that work out the 5-minute interval that, on average, contains the maximum number of steps:
+
+In 5-minute interval
+```{r}
+paste('Maximum steps interval = ', Q2Data[Q2Data$x == max(Q2Data$x), "Interval"])
+
+```
+
+In equivalent time in the day:
+```{r}
+maxMinuteInt <- Q2Data[Q2Data$x == max(Q2Data$x), "Interval"]
+paste('Maximum stpes interval in Time = ', maxMinuteInt %/% 60, ':' , maxMinuteInt %% 60)
+```
 
 
 
